# game-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  COPYRIGHT  README.md  vcpkg.json
.github/workflows/: build.yml  doxygen.yml
config/: default-layout.ini
editor/: CMakeLists.txt  main.cpp
editor/src/: ADocumentWindow.hpp  Editor.cpp  Editor.hpp  IDocumentWindow.hpp  SceneManagerBridge.cpp  SceneManagerBridge.hpp
editor/src/DocumentWindows/: AssetManagerWindow.cpp  AssetManagerWindow.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  EditorScene.cpp  InspectorWindow.hpp  MainScene.cpp  MainScene.hpp  PopupManager.cpp  Primitive.hpp  SceneTreeWindow.cpp  SceneTreeWindow.hpp
editor/src/DocumentWindows/EditorScene/: Init.cpp
editor/src/assets/: Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp
editor/src/backends/: ImGuiBackend.cpp
engine/: CMakeLists.txt
engine/include/: json.hpp
engine/src/: Application.cpp  Application.hpp
engine/src/assets/: Asset.cpp  Asset.hpp  AssetCatalog.cpp  AssetCatalog.hpp  AssetConcepts.hpp  AssetImportParameters.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetImporterBase.hpp  AssetImporterContext.cpp  AssetImporterContext.hpp  AssetImporterInput.hpp  AssetImporterRegistry.cpp  AssetImporterRegistry.hpp  AssetIndex.hpp  AssetLocation.cpp  AssetLocation.hpp  AssetManager.cpp  AssetManager.hpp  AssetName.cpp  AssetName.hpp  AssetPackName.hpp  AssetRef.cpp  AssetRef.hpp  FilenameValidator.hpp  ValidatedName.cpp  ValidatedName.hpp
engine/src/assets/Assets/Model/: Model.hpp  ModelImporter.hpp  ModelParameters.hpp
engine/src/assets/Assets/Texture/: Texture.hpp  TextureImporter.hpp  TextureParameters.hpp
engine/src/components/: PhysicsBodyComponent.hpp
engine/src/ecs/: Coordinator.hpp
engine/src/renderer/: Buffer.cpp  Framebuffer.cpp  RenderCommand.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp  Texture.hpp  VertexArray.cpp  Window.cpp
engine/src/renderer/GraphicsBackends/opengl/: OpenGlBuffer.cpp  OpenGlBuffer.hpp  OpenGlRendererAPI.hpp  OpenGlShader.hpp  OpenGlShaderStorageBuffer.cpp  OpenGlShaderStorageBuffer.hpp  OpenGlTexture2D.cpp  OpenGlTexture2D.hpp  OpenGlWindow.hpp
engine/src/renderer/opengl/: OpenGlBuffer.hpp  OpenGlFramebuffer.cpp  OpenGlFramebuffer.hpp  OpenGlRendererApi.cpp  OpenGlShader.cpp  OpenGlTexture2D.cpp  OpenGlTexture2D.hpp  OpenGlVertexArray.cpp  OpenGlVertexArray.hpp  OpenGlWindow.cpp
engine/src/scripting/managed/: .gitignore  CMakeLists.txt  Nexo.csproj
engine/src/systems/: PhysicsSystem.cpp  PhysicsSystem.hpp  PhysicsSystemWrapper.cpp  PhysicsSystemWrapper.hpp
include/common/: my_raylib.h
include/game_engine/editor/DocumentWindows/: Main3DScene.hpp
scripts/: CMakeCPackOptions.cmake.in  COPYRIGHT.in  copyright.cmake  install.cmake  pack.cmake
scripts/windows/: nsis_config.cmake
src/game_engine/: CMakeLists.txt
src/game_engine/core/: Math.cpp
src/game_engine/core/camera/: Camera.cpp
src/game_engine/editor/DocumentWindows/: Main3DScene.cpp  SceneTreeWindow.cpp
src/game_engine/editor/DocumentWindows/UIComponents/: ToolBar.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/engine/: CMakeLists.txt
tests/engine/assets/: AssetLocation.test.cpp  AssetName.test.cpp
tests/renderer/: Framebuffer.test.cpp  RendererAPI.test.cpp  Shader.test.cpp  Texture.test.cpp  VertexArray.test.cpp
